fix issue with safari jumping

--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -2,6 +2,8 @@
     /* problem on safari 15 */
     isolation: inherit;
     position: relative;
+    display: grid;
+    place-content: center;
 }
 
 .contactDetails {
